<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pickup"
    tools:context=".CustomerLoginRegisterActivity">

    <TextView
        android:id="@+id/customer_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:text="@string/customer_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customer_status"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/customer_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/customer_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/customer_login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/customer_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:text="Login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/customer_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/customer_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customer_register_link"
        android:layout_marginTop="11dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/create_account"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />
</RelativeLayout>