<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pickup"
    tools:context=".DriverLoginRegisterActivity">

    <TextView
        android:id="@+id/titlr_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/driver_email"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        android:text="@string/driver_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/driver_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/driver_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Password..."
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/driver_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/login_driver_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_orange_light"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/driver_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/create_driver_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_driver_btn"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_an_accoun"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/register_driver_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/create_driver_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/holo_red_light"
        android:text="Register"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />
</RelativeLayout>